# keycompute

./: .env.example  Cargo.toml  README.md  config.toml.example  docker-compose.yml
.github/workflows/: keycompute.yaml
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: e2e_api_flow.rs  e2e_auth.rs  e2e_database.rs  e2e_full_chain.rs  e2e_pricing.rs  e2e_ratelimit.rs  e2e_system_settings.rs  e2e_user_tenant.rs
crates/keycompute-auth/: Cargo.toml
crates/keycompute-auth/src/: api_key.rs  jwt.rs  lib.rs  user.rs
crates/keycompute-auth/src/password/: mod.rs  register.rs  reset.rs
crates/keycompute-billing/: Cargo.toml
crates/keycompute-billing/src/: calculator.rs  lib.rs  usage_log.rs  usage_source.rs
crates/keycompute-config/src/: auth.rs  lib.rs
crates/keycompute-db/: Cargo.toml
crates/keycompute-db/src/: lib.rs  schema.rs
crates/keycompute-db/src/migrations/: 001_create_users.sql  001_init.sql  002_create_tenants.sql  003_create_api_keys.sql  004_create_accounts.sql  005_create_pricing_models.sql  006_create_usage_logs.sql  007_create_distribution_records.sql  008_create_tenant_distribution_rules.sql  015_create_system_settings.sql
crates/keycompute-db/src/models/: account.rs  api_key.rs  distribution_record.rs  mod.rs  payment_order.rs  pricing_model.rs  system_setting.rs  tenant.rs  tenant_distribution_rule.rs  usage_log.rs  user.rs  user_balance.rs
crates/keycompute-distribution/: Cargo.toml
crates/keycompute-distribution/src/: calculator.rs  lib.rs  records.rs  rule.rs
crates/keycompute-emailserver/: Cargo.toml
crates/keycompute-emailserver/src/: lib.rs
crates/keycompute-observability/: Cargo.toml
crates/keycompute-observability/src/: host_monitor.rs  lib.rs  logger.rs  metrics.rs  tracing.rs
crates/keycompute-payment/keycompute-alipay/: Cargo.toml
crates/keycompute-payment/keycompute-wechatpay/: Cargo.toml
crates/keycompute-pricing/: Cargo.toml
crates/keycompute-pricing/src/: lib.rs
crates/keycompute-ratelimit/: Cargo.toml
crates/keycompute-ratelimit/src/: lib.rs  redis.rs
crates/keycompute-routing/: Cargo.toml
crates/keycompute-routing/src/: lib.rs  provider_health.rs
crates/keycompute-runtime/: Cargo.toml
crates/keycompute-server/: Cargo.toml
crates/keycompute-server/src/: error.rs  extractors.rs  main.rs  middleware.rs  router.rs  state.rs
crates/keycompute-types/: Cargo.toml
crates/keycompute-types/src/: error.rs  execution_plan.rs  lib.rs  pricing.rs  request.rs  response.rs  usage.rs
crates/llm-gateway/: Cargo.toml
crates/llm-gateway/src/: executor.rs  lib.rs  retry.rs  streaming.rs
crates/llm-provider/keycompute-claude/: Cargo.toml
crates/llm-provider/keycompute-deepseek/: Cargo.toml
crates/llm-provider/keycompute-gemini/: Cargo.toml
crates/llm-provider/keycompute-gemini/src/: adapter.rs  lib.rs  protocol.rs  stream.rs
crates/llm-provider/keycompute-glm/: Cargo.toml
crates/llm-provider/keycompute-minimax/: Cargo.toml
crates/llm-provider/keycompute-ollama/: Cargo.toml
crates/llm-provider/keycompute-openai/: Cargo.toml
crates/llm-provider/keycompute-provider-trait/: Cargo.toml
docs/: api_non_stream.py  api_stream.py
(+24 files in other folders)
