[package]
name = "keycompute-db"
version = "0.1.0"
edition = "2024"

[dependencies]
keycompute-types.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "bigdecimal", "migrate"] }
tokio = { version = "1.44", features = ["full"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
once_cell = "1.21"
tracing = "0.1"
