[package]
name = "keycompute-observability"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { version = "0.1", features = ["attributes", "log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"
once_cell = "1.21"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.34"
chrono = { version = "0.4", features = ["serde"] }
