[package]
name = "keycompute-types"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
