[package]
name = "keycompute-gemini"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "test-util"] }
tokio-stream = "0.1"
bytes = "1"
keycompute-provider-trait = { path = "../keycompute-provider-trait" }
keycompute-types = { path = "../../keycompute-types" }
